--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "swiper": "^12.0.2"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
