--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.1",
-    "swiper": "^12.0.2",
+    "swiper": "^12.0.2"
     
   },
   "devDependencies": {
